# protodef-reader

./: Cargo.toml  README.md  locations.json  out.txt  protocol.ts
src/: array_to_map_transform.rs  bin.rs  de.rs  lib.rs  main.rs  oxc_find.rs  protocol2types.rs  walk.rs
src/inputs/: 1_12_2_protocol.json  1_21_1_protocol.json  1_8_9_protocol.json
src/snapshots/: alternate_protocol_lang__test__parsing_mcdata_protocol_files@0.30c__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.10-pre1__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.10__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.11__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.12-pre4__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.12.1__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.12.2__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.12__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.13.1__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.13.2-pre1__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.13.2-pre2__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.13.2__protocol.json.snap  alternate_protocol_lang__test__parsing_mcdata_protocol_files@1.13__protocol.json.snap  (+95 more)
